force-app/main/default/objects/FIN_AXSRuleEngine__c/FIN_AXSRuleEngine__c.object-meta.xml
<CustomObject>
    <label>AXS Rule Engine</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AXS Rule Engines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>