force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/FIN_AssociatedContract__c.field-meta.xml
<CustomField>
    <fullName>FIN_AssociatedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>AXS Rule Engines</relationshipLabel>
    <relationshipName>AXS_Rule_Engines</relationshipName>
    <type>Lookup</type>
</CustomField>