force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/FIN_Condition__c.field-meta.xml
<CustomField>
    <fullName>FIN_Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>