force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/FIN_Object__c.field-meta.xml
<CustomField>
    <fullName>FIN_Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Sales Transactions</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Payment Distribution</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>