force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/FIN_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FIN_OrderNumber__c</fullName>
    <label>Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>