force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/FIN_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>FIN_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AXS_Rule_Engines1</relationshipName>
    <type>Lookup</type>
</CustomField>