force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/FIN_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Status__c</fullName>
    <formula>IF (isActive__c == true,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;red&apos;) + &apos; Inactive&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>