force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/FIN_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Statistical</fullName>
            </value>
            <value>
                <fullName>Contract-Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>