force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines is current rule active for run</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>