force-app/main/default/objects/FIN_AXSRuleEngine__c/fields/Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Description__c</fullName>
    <label>Rule Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>