force-app/main/default/objects/FIN_AXSRuleEngine__c/recordTypes/EnrichmentTagging.recordType-meta.xml
<RecordType>
    <fullName>EnrichmentTagging</fullName>
    <active>true</active>
    <description>Financial &amp; Statistical</description>
    <label>Enrichment Tagging</label>
</RecordType>