force-app/main/default/objects/FIN_AXSRuleEngine__c/recordTypes/Settlement.recordType-meta.xml
<RecordType>
    <fullName>Settlement</fullName>
    <active>true</active>
    <description>Settlement</description>
    <label>Settlement</label>
</RecordType>