force-app/main/default/objects/FIN_AXSRuleEngine__c/validationRules/Active_Engine_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Engine_Rule</fullName>
    <active>true</active>
    <description>Only Finance Managers, Administrator System can active checkbox.</description>
    <errorConditionFormula>AND(
 ISCHANGED(isActive__c),
 NOT(OR ( 
   $Profile.Name = &quot;System Administrator&quot;,
   $Profile.Name = &quot;US FIN Manager&quot;))
)</errorConditionFormula>
    <errorMessage>The Active flag can&apos;t be change.</errorMessage>
</ValidationRule>