force-app/main/default/objects/FIN_AXSRuleEngine__c/validationRules/AssociatedContract_must_be_active.validationRule-meta.xml
<ValidationRule>
    <fullName>AssociatedContract_must_be_active</fullName>
    <active>true</active>
    <description>Associated- Contract must be active to run the rule</description>
    <errorConditionFormula>AND(
OR(ISCHANGED(isActive__c),ISNEW()),
isActive__c = true,
FIN_AssociatedContract__r.FIN_ActiveStatus__c = false,
RecordType.Name = &quot;Settlement&quot;
)</errorConditionFormula>
    <errorMessage>Associated Contract must be active to run the rule</errorMessage>
</ValidationRule>