force-app/main/default/objects/FIN_AXSRuleEngine__c/validationRules/Contract_Subcontract_must_be_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Subcontract_must_be_active</fullName>
    <active>true</active>
    <description>Contract / Subcontract must be active to run the rule</description>
    <errorConditionFormula>AND(
    ISCHANGED(isActive__c),
    isActive__c = true,
    FIN_AssociatedContract__r.FIN_ActiveStatus__c = false 
   
)</errorConditionFormula>
    <errorMessage>Contract / Subcontract must be active to run the rule</errorMessage>
</ValidationRule>