force-app/main/default/objects/FIN_AXSRuleEngine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rule_Description__c</columns>
    <columns>FIN_Object__c</columns>
    <columns>FIN_AssociatedContract__c</columns>
    <columns>FIN_Type__c</columns>
    <columns>FIN_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>