force-app/main/default/objects/FIN_AXSRuleEngine__c/listViews/My_Rules_to_Approve.listView-meta.xml
<ListView>
    <fullName>My_Rules_to_Approve</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>FIN_Object__c</columns>
    <columns>FIN_AssociatedContract__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Rules to Approve</label>
</ListView>