force-app/main/default/objects/FIN_AXSRuleEngine__c/listViews/Rejected_Rules.listView-meta.xml
<ListView>
    <fullName>Rejected_Rules</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>FIN_Object__c</columns>
    <columns>FIN_AssociatedContract__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rejected Rules</label>
</ListView>