force-app/main/default/objects/FIN_AXSRuleEngine__c/listViews/Rules_to_be_Assigned.listView-meta.xml
<ListView>
    <fullName>Rules_to_be_Assigned</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>FIN_Object__c</columns>
    <columns>FIN_AssociatedContract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Approver__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>FIN_Reviewer__c</field>
        <operation>equals</operation>
    </filters>
    <label>Rules to be Assigned</label>
</ListView>