force-app/main/default/objects/FIN_AXSRuleEngine__c/listViews/Statistical_Rules_US.listView-meta.xml
<ListView>
    <fullName>Statistical_Rules_US</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Type__c</field>
        <operation>equals</operation>
        <value>Financial,Statistical</value>
    </filters>
    <filters>
        <field>FIN_Region__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>US- Statistical Rules</label>
    <sharedTo>
        <group>US_Region</group>
    </sharedTo>
</ListView>